@@ -1,3 +1,9 @@
+2006-04-01  Roger Sayle  <roger@eyesopen.com>
+
+	* gfortran.dg/dependency_14.f90: New test case.
+	* gfortran.dg/dependency_15.f90: Likewise.
+	* gfortran.dg/dependency_16.f90: Likewise.
+
 2006-03-31  Asher Langton  <langton2@llnl.gov>
 
 	PR fortran/25358
